--- a/build.gradle
+++ b/build.gradle
@@ -10,20 +10,12 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-}
-
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	// Jitpack IO
-	implementation 'com.github.jitpack:gradle-simple:1.0'
 }
 
 processResources {
@@ -48,28 +40,30 @@ java {
 }
 
 jar {
-	from("LICENSE")
-}
-
-allprojects {
-	repositories {
-		jcenter()
-
-		maven {
-			url "https://jitpack.io"
-		}
-	}
+	from "LICENSE"
 }
 
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
 			artifact(remapJar) {
 				builtBy remapJar
 			}
 			artifact(sourcesJar) {
 				builtBy remapSourcesJar
+			}
+		}
+	}
+	repositories {
+		// mavenLocal()
+		maven {
+			name = "cloudsmith"
+			url = "https://maven.cloudsmith.io/louwinds-mods/reload/"
+			credentials {
+				def envUsername = System.getenv("cloudUsername")
+				def envPassword = System.getenv("cloudPassword")
+				username = envUsername == null ? getProperty("cloudUsername") : envUsername
+				password = envPassword == null ? getProperty("cloudPassword") : envPassword
 			}
 		}
 	}
