--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = github.Louwind.reload-api
+	maven_group = github.louwind.reload-api
 	archives_base_name = reload
 
 # Dependencies
