--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# Check https://fabricmc.net/versions.html
-	minecraft_version=1.17-pre5
-	yarn_mappings=1.17-pre5+build.6
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.5
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 1.1.0-pre5
+	mod_version = 1.1.0
 	maven_group = github.louwind.reload-api
 	archives_base_name = reload
 
 # Dependencies
 	# Fabric API
-	fabric_version=0.34.8+1.17
+	fabric_version=0.34.9+1.17
