Reload 2.0.0-experimental-snapshot-6 is out!

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# Check https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.10
+	minecraft_version=1.18_experimental-snapshot-6
+	yarn_mappings=1.18_experimental-snapshot-6+build.3
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.4.0
+	mod_version = 2.0.0-experimental-snapshot-6
 	maven_group = github.louwind.reload-api
 	archives_base_name = reload
 
 # Dependencies
 	# Fabric API
-	fabric_version=0.36.1+1.17
+	fabric_version=0.40.0+1.18_experimental
