--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# Check https://fabricmc.net/versions.html
-	minecraft_version=1.18_experimental-snapshot-7
-	yarn_mappings=1.18_experimental-snapshot-7+build.2
-	loader_version=0.11.6
+	minecraft_version=21w37a
+	yarn_mappings=21w37a+build.13
+	loader_version=0.11.7
 
 # Mod Properties
-	mod_version = 2.0.0-experimental-snapshot-7
+	mod_version = 2.0.2+1.18-21w37a
 	maven_group = github.louwind.reload-api
 	archives_base_name = reload
 
 # Dependencies
 	# Fabric API
-	fabric_version=0.40.1+1.18_experimental
+	fabric_version=0.40.3+1.18
